parser/src/test/resources/corpus/valid/39_unary_not.ff
rule "Unary Not" {
  let inverted = not closed
  let combined = not (a and b)
}
