parser/src/test/resources/corpus/invalid/38_unmatched_open_paren.ff
rule "Unmatched Open Paren" {
  let x = (a + b
}
